pwn_parser.output
   0  $accept : file $end

   1  file : decls
   2       |

   3  decls : decl
   4        | decls decl

   5  decl : outsideBlockDecl

   6  insideBlockDecls : insideBlockDecl
   7                   | insideBlockDecls insideBlockDecl

   8  outsideBlockDecl : funcDecl
   9                   | funcDef
  10                   | outBlockVarDecl ';'

  11  insideBlockDecl : inBlockVarDecl ';'

  12  inBlockVarDecl : type tIDENTIFIER
  13                 | type tIDENTIFIER '=' expr
  14                 | '<' type '>' tIDENTIFIER '=' expr

  15  outBlockVarDecl : tLOCAL type tIDENTIFIER
  16                  | tLOCAL type tIDENTIFIER '=' expr
  17                  | tIMPORT type tIDENTIFIER
  18                  | tLOCAL '<' type '>' tIDENTIFIER '=' expr
  19                  | tIMPORT '<' type '>' tIDENTIFIER
  20                  | type tIDENTIFIER
  21                  | type tIDENTIFIER '=' expr
  22                  | '<' type '>' tIDENTIFIER '=' expr

  23  funcDef : tLOCAL type tIDENTIFIER '(' funcArgs ')' block
  24          | tLOCAL type tIDENTIFIER '(' funcArgs ')' '=' literal block
  25          | tLOCAL '!' tIDENTIFIER '(' funcArgs ')' block
  26          | type tIDENTIFIER '(' funcArgs ')' block
  27          | type tIDENTIFIER '(' funcArgs ')' '=' literal block
  28          | '!' tIDENTIFIER '(' funcArgs ')' block

  29  funcDecl : '!' tIDENTIFIER '(' funcArgs ')'
  30           | type tIDENTIFIER '(' funcArgs ')'
  31           | tLOCAL type tIDENTIFIER '(' funcArgs ')'
  32           | tLOCAL '!' tIDENTIFIER '(' funcArgs ')'
  33           | tIMPORT type tIDENTIFIER '(' funcArgs ')'
  34           | tIMPORT '!' tIDENTIFIER '(' funcArgs ')'

  35  funcArgs : args
  36           |

  37  args : arg
  38       | args ',' arg

  39  arg : type tIDENTIFIER

  40  block : '{' insideBlockDecls list returnable '}'
  41        | '{' insideBlockDecls returnable '}'
  42        | '{' list returnable '}'
  43        | '{' returnable '}'

  44  returnable : tRETURN
  45             |

  46  type : '#'
  47       | '$'
  48       | '*'
  49       | '%'

  50  literal : tINTEGER
  51          | strLiteral
  52          | tREAL
  53          | tNOOB

  54  strLiteral : tSTRING
  55             | strLiteral tSTRING

  56  list : stmt
  57       | list stmt

  58  stmt : expr ';'
  59       | expr tPRINTLINE
  60       | expr '!'
  61       | tIF '(' expr ')' stmt
  62       | tIF '(' expr ')' stmt tELSE stmt
  63       | tREPEAT '(' optExpr ';' optExpr ';' optExpr ')' stmt
  64       | tSTOP ';'
  65       | tSTOP tINTEGER ';'
  66       | tNEXT ';'
  67       | tNEXT tINTEGER ';'
  68       | block

  69  expr : literal
  70       | functionCall
  71       | '~' expr
  72       | '-' expr
  73       | '+' expr
  74       | expr '&' expr
  75       | expr '|' expr
  76       | expr '+' expr
  77       | expr '-' expr
  78       | expr '*' expr
  79       | expr '/' expr
  80       | expr '%' expr
  81       | expr '<' expr
  82       | expr '>' expr
  83       | expr tGE expr
  84       | expr tLE expr
  85       | expr tNE expr
  86       | expr tEQ expr
  87       | '[' expr ']'
  88       | '(' expr ')'
  89       | '@'
  90       | lval '?'
  91       | lval
  92       | lval '=' expr

  93  functionCall : tIDENTIFIER '(' exprArgs ')'
  94               | tIDENTIFIER '(' ')'

  95  optExpr : expr
  96          |

  97  exprArgs : expr ',' exprArgs
  98           | expr

  99  lval : tIDENTIFIER
 100       | lval '[' expr ']'
 101       | functionCall '[' expr ']'
 102       | '(' expr ')' '[' expr ']'

state 0
	$accept : . file $end  (0)
	file : .  (2)

	tIMPORT  shift 1
	tLOCAL  shift 2
	'<'  shift 3
	'*'  shift 4
	'%'  shift 5
	'!'  shift 6
	'#'  shift 7
	'$'  shift 8
	$end  reduce 2

	file  goto 9
	funcDecl  goto 10
	decl  goto 11
	funcDef  goto 12
	outBlockVarDecl  goto 13
	outsideBlockDecl  goto 14
	decls  goto 15
	type  goto 16


state 1
	outBlockVarDecl : tIMPORT . type tIDENTIFIER  (17)
	outBlockVarDecl : tIMPORT . '<' type '>' tIDENTIFIER  (19)
	funcDecl : tIMPORT . type tIDENTIFIER '(' funcArgs ')'  (33)
	funcDecl : tIMPORT . '!' tIDENTIFIER '(' funcArgs ')'  (34)

	'<'  shift 17
	'*'  shift 4
	'%'  shift 5
	'!'  shift 18
	'#'  shift 7
	'$'  shift 8
	.  error

	type  goto 19


state 2
	outBlockVarDecl : tLOCAL . type tIDENTIFIER  (15)
	outBlockVarDecl : tLOCAL . type tIDENTIFIER '=' expr  (16)
	outBlockVarDecl : tLOCAL . '<' type '>' tIDENTIFIER '=' expr  (18)
	funcDef : tLOCAL . type tIDENTIFIER '(' funcArgs ')' block  (23)
	funcDef : tLOCAL . type tIDENTIFIER '(' funcArgs ')' '=' literal block  (24)
	funcDef : tLOCAL . '!' tIDENTIFIER '(' funcArgs ')' block  (25)
	funcDecl : tLOCAL . type tIDENTIFIER '(' funcArgs ')'  (31)
	funcDecl : tLOCAL . '!' tIDENTIFIER '(' funcArgs ')'  (32)

	'<'  shift 20
	'*'  shift 4
	'%'  shift 5
	'!'  shift 21
	'#'  shift 7
	'$'  shift 8
	.  error

	type  goto 22


state 3
	outBlockVarDecl : '<' . type '>' tIDENTIFIER '=' expr  (22)

	'*'  shift 4
	'%'  shift 5
	'#'  shift 7
	'$'  shift 8
	.  error

	type  goto 23


state 4
	type : '*' .  (48)

	.  reduce 48


state 5
	type : '%' .  (49)

	.  reduce 49


state 6
	funcDef : '!' . tIDENTIFIER '(' funcArgs ')' block  (28)
	funcDecl : '!' . tIDENTIFIER '(' funcArgs ')'  (29)

	tIDENTIFIER  shift 24
	.  error


state 7
	type : '#' .  (46)

	.  reduce 46


state 8
	type : '$' .  (47)

	.  reduce 47


state 9
	$accept : file . $end  (0)

	$end  accept


state 10
	outsideBlockDecl : funcDecl .  (8)

	.  reduce 8


state 11
	decls : decl .  (3)

	.  reduce 3


state 12
	outsideBlockDecl : funcDef .  (9)

	.  reduce 9


state 13
	outsideBlockDecl : outBlockVarDecl . ';'  (10)

	';'  shift 25
	.  error


state 14
	decl : outsideBlockDecl .  (5)

	.  reduce 5


state 15
	file : decls .  (1)
	decls : decls . decl  (4)

	tIMPORT  shift 1
	tLOCAL  shift 2
	'<'  shift 3
	'*'  shift 4
	'%'  shift 5
	'!'  shift 6
	'#'  shift 7
	'$'  shift 8
	$end  reduce 1

	funcDecl  goto 10
	decl  goto 26
	funcDef  goto 12
	outBlockVarDecl  goto 13
	outsideBlockDecl  goto 14
	type  goto 16


state 16
	outBlockVarDecl : type . tIDENTIFIER  (20)
	outBlockVarDecl : type . tIDENTIFIER '=' expr  (21)
	funcDef : type . tIDENTIFIER '(' funcArgs ')' block  (26)
	funcDef : type . tIDENTIFIER '(' funcArgs ')' '=' literal block  (27)
	funcDecl : type . tIDENTIFIER '(' funcArgs ')'  (30)

	tIDENTIFIER  shift 27
	.  error


state 17
	outBlockVarDecl : tIMPORT '<' . type '>' tIDENTIFIER  (19)

	'*'  shift 4
	'%'  shift 5
	'#'  shift 7
	'$'  shift 8
	.  error

	type  goto 28


state 18
	funcDecl : tIMPORT '!' . tIDENTIFIER '(' funcArgs ')'  (34)

	tIDENTIFIER  shift 29
	.  error


state 19
	outBlockVarDecl : tIMPORT type . tIDENTIFIER  (17)
	funcDecl : tIMPORT type . tIDENTIFIER '(' funcArgs ')'  (33)

	tIDENTIFIER  shift 30
	.  error


state 20
	outBlockVarDecl : tLOCAL '<' . type '>' tIDENTIFIER '=' expr  (18)

	'*'  shift 4
	'%'  shift 5
	'#'  shift 7
	'$'  shift 8
	.  error

	type  goto 31


state 21
	funcDef : tLOCAL '!' . tIDENTIFIER '(' funcArgs ')' block  (25)
	funcDecl : tLOCAL '!' . tIDENTIFIER '(' funcArgs ')'  (32)

	tIDENTIFIER  shift 32
	.  error


state 22
	outBlockVarDecl : tLOCAL type . tIDENTIFIER  (15)
	outBlockVarDecl : tLOCAL type . tIDENTIFIER '=' expr  (16)
	funcDef : tLOCAL type . tIDENTIFIER '(' funcArgs ')' block  (23)
	funcDef : tLOCAL type . tIDENTIFIER '(' funcArgs ')' '=' literal block  (24)
	funcDecl : tLOCAL type . tIDENTIFIER '(' funcArgs ')'  (31)

	tIDENTIFIER  shift 33
	.  error


state 23
	outBlockVarDecl : '<' type . '>' tIDENTIFIER '=' expr  (22)

	'>'  shift 34
	.  error


state 24
	funcDef : '!' tIDENTIFIER . '(' funcArgs ')' block  (28)
	funcDecl : '!' tIDENTIFIER . '(' funcArgs ')'  (29)

	'('  shift 35
	.  error


state 25
	outsideBlockDecl : outBlockVarDecl ';' .  (10)

	.  reduce 10


state 26
	decls : decls decl .  (4)

	.  reduce 4


state 27
	outBlockVarDecl : type tIDENTIFIER .  (20)
	outBlockVarDecl : type tIDENTIFIER . '=' expr  (21)
	funcDef : type tIDENTIFIER . '(' funcArgs ')' block  (26)
	funcDef : type tIDENTIFIER . '(' funcArgs ')' '=' literal block  (27)
	funcDecl : type tIDENTIFIER . '(' funcArgs ')'  (30)

	'='  shift 36
	'('  shift 37
	';'  reduce 20


state 28
	outBlockVarDecl : tIMPORT '<' type . '>' tIDENTIFIER  (19)

	'>'  shift 38
	.  error


state 29
	funcDecl : tIMPORT '!' tIDENTIFIER . '(' funcArgs ')'  (34)

	'('  shift 39
	.  error


state 30
	outBlockVarDecl : tIMPORT type tIDENTIFIER .  (17)
	funcDecl : tIMPORT type tIDENTIFIER . '(' funcArgs ')'  (33)

	'('  shift 40
	';'  reduce 17


state 31
	outBlockVarDecl : tLOCAL '<' type . '>' tIDENTIFIER '=' expr  (18)

	'>'  shift 41
	.  error


state 32
	funcDef : tLOCAL '!' tIDENTIFIER . '(' funcArgs ')' block  (25)
	funcDecl : tLOCAL '!' tIDENTIFIER . '(' funcArgs ')'  (32)

	'('  shift 42
	.  error


state 33
	outBlockVarDecl : tLOCAL type tIDENTIFIER .  (15)
	outBlockVarDecl : tLOCAL type tIDENTIFIER . '=' expr  (16)
	funcDef : tLOCAL type tIDENTIFIER . '(' funcArgs ')' block  (23)
	funcDef : tLOCAL type tIDENTIFIER . '(' funcArgs ')' '=' literal block  (24)
	funcDecl : tLOCAL type tIDENTIFIER . '(' funcArgs ')'  (31)

	'='  shift 43
	'('  shift 44
	';'  reduce 15


state 34
	outBlockVarDecl : '<' type '>' . tIDENTIFIER '=' expr  (22)

	tIDENTIFIER  shift 45
	.  error


state 35
	funcDef : '!' tIDENTIFIER '(' . funcArgs ')' block  (28)
	funcDecl : '!' tIDENTIFIER '(' . funcArgs ')'  (29)
	funcArgs : .  (36)

	'*'  shift 4
	'%'  shift 5
	'#'  shift 7
	'$'  shift 8
	')'  reduce 36

	arg  goto 46
	funcArgs  goto 47
	args  goto 48
	type  goto 49


state 36
	outBlockVarDecl : type tIDENTIFIER '=' . expr  (21)

	tINTEGER  shift 50
	tIDENTIFIER  shift 51
	tSTRING  shift 52
	tREAL  shift 53
	tNOOB  shift 54
	'+'  shift 55
	'-'  shift 56
	'~'  shift 57
	'('  shift 58
	'['  shift 59
	'@'  shift 60
	.  error

	expr  goto 61
	literal  goto 62
	functionCall  goto 63
	lval  goto 64
	strLiteral  goto 65


state 37
	funcDef : type tIDENTIFIER '(' . funcArgs ')' block  (26)
	funcDef : type tIDENTIFIER '(' . funcArgs ')' '=' literal block  (27)
	funcDecl : type tIDENTIFIER '(' . funcArgs ')'  (30)
	funcArgs : .  (36)

	'*'  shift 4
	'%'  shift 5
	'#'  shift 7
	'$'  shift 8
	')'  reduce 36

	arg  goto 46
	funcArgs  goto 66
	args  goto 48
	type  goto 49


state 38
	outBlockVarDecl : tIMPORT '<' type '>' . tIDENTIFIER  (19)

	tIDENTIFIER  shift 67
	.  error


state 39
	funcDecl : tIMPORT '!' tIDENTIFIER '(' . funcArgs ')'  (34)
	funcArgs : .  (36)

	'*'  shift 4
	'%'  shift 5
	'#'  shift 7
	'$'  shift 8
	')'  reduce 36

	arg  goto 46
	funcArgs  goto 68
	args  goto 48
	type  goto 49


state 40
	funcDecl : tIMPORT type tIDENTIFIER '(' . funcArgs ')'  (33)
	funcArgs : .  (36)

	'*'  shift 4
	'%'  shift 5
	'#'  shift 7
	'$'  shift 8
	')'  reduce 36

	arg  goto 46
	funcArgs  goto 69
	args  goto 48
	type  goto 49


state 41
	outBlockVarDecl : tLOCAL '<' type '>' . tIDENTIFIER '=' expr  (18)

	tIDENTIFIER  shift 70
	.  error


state 42
	funcDef : tLOCAL '!' tIDENTIFIER '(' . funcArgs ')' block  (25)
	funcDecl : tLOCAL '!' tIDENTIFIER '(' . funcArgs ')'  (32)
	funcArgs : .  (36)

	'*'  shift 4
	'%'  shift 5
	'#'  shift 7
	'$'  shift 8
	')'  reduce 36

	arg  goto 46
	funcArgs  goto 71
	args  goto 48
	type  goto 49


state 43
	outBlockVarDecl : tLOCAL type tIDENTIFIER '=' . expr  (16)

	tINTEGER  shift 50
	tIDENTIFIER  shift 51
	tSTRING  shift 52
	tREAL  shift 53
	tNOOB  shift 54
	'+'  shift 55
	'-'  shift 56
	'~'  shift 57
	'('  shift 58
	'['  shift 59
	'@'  shift 60
	.  error

	expr  goto 72
	literal  goto 62
	functionCall  goto 63
	lval  goto 64
	strLiteral  goto 65


state 44
	funcDef : tLOCAL type tIDENTIFIER '(' . funcArgs ')' block  (23)
	funcDef : tLOCAL type tIDENTIFIER '(' . funcArgs ')' '=' literal block  (24)
	funcDecl : tLOCAL type tIDENTIFIER '(' . funcArgs ')'  (31)
	funcArgs : .  (36)

	'*'  shift 4
	'%'  shift 5
	'#'  shift 7
	'$'  shift 8
	')'  reduce 36

	arg  goto 46
	funcArgs  goto 73
	args  goto 48
	type  goto 49


state 45
	outBlockVarDecl : '<' type '>' tIDENTIFIER . '=' expr  (22)

	'='  shift 74
	.  error


state 46
	args : arg .  (37)

	.  reduce 37


state 47
	funcDef : '!' tIDENTIFIER '(' funcArgs . ')' block  (28)
	funcDecl : '!' tIDENTIFIER '(' funcArgs . ')'  (29)

	')'  shift 75
	.  error


state 48
	funcArgs : args .  (35)
	args : args . ',' arg  (38)

	','  shift 76
	')'  reduce 35


state 49
	arg : type . tIDENTIFIER  (39)

	tIDENTIFIER  shift 77
	.  error


state 50
	literal : tINTEGER .  (50)

	.  reduce 50


state 51
	functionCall : tIDENTIFIER . '(' exprArgs ')'  (93)
	functionCall : tIDENTIFIER . '(' ')'  (94)
	lval : tIDENTIFIER .  (99)

	'('  shift 78
	tPRINTLINE  reduce 99
	'='  reduce 99
	'&'  reduce 99
	'|'  reduce 99
	tGE  reduce 99
	tLE  reduce 99
	tEQ  reduce 99
	tNE  reduce 99
	'>'  reduce 99
	'<'  reduce 99
	'+'  reduce 99
	'-'  reduce 99
	'*'  reduce 99
	'/'  reduce 99
	'%'  reduce 99
	';'  reduce 99
	')'  reduce 99
	'!'  reduce 99
	','  reduce 99
	'['  reduce 99
	']'  reduce 99
	'?'  reduce 99


state 52
	strLiteral : tSTRING .  (54)

	.  reduce 54


state 53
	literal : tREAL .  (52)

	.  reduce 52


state 54
	literal : tNOOB .  (53)

	.  reduce 53


state 55
	expr : '+' . expr  (73)

	tINTEGER  shift 50
	tIDENTIFIER  shift 51
	tSTRING  shift 52
	tREAL  shift 53
	tNOOB  shift 54
	'+'  shift 55
	'-'  shift 56
	'~'  shift 57
	'('  shift 58
	'['  shift 59
	'@'  shift 60
	.  error

	expr  goto 79
	literal  goto 62
	functionCall  goto 63
	lval  goto 64
	strLiteral  goto 65


state 56
	expr : '-' . expr  (72)

	tINTEGER  shift 50
	tIDENTIFIER  shift 51
	tSTRING  shift 52
	tREAL  shift 53
	tNOOB  shift 54
	'+'  shift 55
	'-'  shift 56
	'~'  shift 57
	'('  shift 58
	'['  shift 59
	'@'  shift 60
	.  error

	expr  goto 80
	literal  goto 62
	functionCall  goto 63
	lval  goto 64
	strLiteral  goto 65


state 57
	expr : '~' . expr  (71)

	tINTEGER  shift 50
	tIDENTIFIER  shift 51
	tSTRING  shift 52
	tREAL  shift 53
	tNOOB  shift 54
	'+'  shift 55
	'-'  shift 56
	'~'  shift 57
	'('  shift 58
	'['  shift 59
	'@'  shift 60
	.  error

	expr  goto 81
	literal  goto 62
	functionCall  goto 63
	lval  goto 64
	strLiteral  goto 65


state 58
	expr : '(' . expr ')'  (88)
	lval : '(' . expr ')' '[' expr ']'  (102)

	tINTEGER  shift 50
	tIDENTIFIER  shift 51
	tSTRING  shift 52
	tREAL  shift 53
	tNOOB  shift 54
	'+'  shift 55
	'-'  shift 56
	'~'  shift 57
	'('  shift 58
	'['  shift 59
	'@'  shift 60
	.  error

	expr  goto 82
	literal  goto 62
	functionCall  goto 63
	lval  goto 64
	strLiteral  goto 65


state 59
	expr : '[' . expr ']'  (87)

	tINTEGER  shift 50
	tIDENTIFIER  shift 51
	tSTRING  shift 52
	tREAL  shift 53
	tNOOB  shift 54
	'+'  shift 55
	'-'  shift 56
	'~'  shift 57
	'('  shift 58
	'['  shift 59
	'@'  shift 60
	.  error

	expr  goto 83
	literal  goto 62
	functionCall  goto 63
	lval  goto 64
	strLiteral  goto 65

